Changed resolution, fixed map, todo: anims

--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ canvas {
 	margin-left:auto;
 	margin-right:auto;
 	width:80%;
-	/*image-rendering: -moz-crisp-edges;
+	image-rendering: -moz-crisp-edges;
 	image-rendering:   -o-crisp-edges;
 	image-rendering: -webkit-optimize-contrast;
 	image-rendering: crisp-edges;
-	-ms-interpolation-mode: nearest-neighbor;*/
+	-ms-interpolation-mode: nearest-neighbor;
 }
