--- a/style.css
+++ b/style.css
@@ -13,4 +13,10 @@ canvas {
     background-color:#2F2F2F;
     margin-left:auto;
     margin-right:auto;
+    width:80%;
+    image-rendering: -moz-crisp-edges;
+    image-rendering:   -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor;
 }
