--- a/style.css
+++ b/style.css
@@ -1,16 +1,3 @@
 body {
-    background-color: #080808;
-    color:RED;
-    text-align:center;
-    font-family:"Arial";
-}
-
-a {
-    color:ORANGE;
-}
-
-canvas {
-    background-color:#2F2F2F;
-    margin-left:auto;
-    margin-right:auto;
+    margin:0;
 }
