--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 body {
     margin:0;
+    background-color:#000000;
+    text-align:center;
+    font-family:"Arial";
+}
+
+p {
+    color:#AF8F1F;
+}
+
+a {
+    color:#DF7F1F;
 }
